<resources>
    <string name="app_name">CryptoPlaces</string>
    <string name="action_settings">Réglages</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_convertor">Convertisseur</string>
    <string name="title_places">Lieux</string>
    <string name="title_portefeuille">Mon compte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Commencer</string>
    <string name="public_key_title">Précisez votre clé publique</string>
    <string name="start_button_text">Commencer</string>
    <string name="enterPublicKey">Entrez votre clé publique</string>
    <string name="ignore_this_step">Ignorer cette étape</string>
    <string name="equals">=</string>
    <string name="value">Valeur</string>
    <string name="zero">0</string>
    <string name="convertir">Convertir</string>
    <string name="one">test</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="update">Mettre à jour</string>
    <string name="btc">BTC</string>
    <string name="minus">-</string>
    <string name="eur">EUR</string>
    <string name="USD">USD</string>
    <string name="buy_bitcoins">Achetez des Bitcoins</string>
</resources>
